unpackaged/main/default/objects/pse__Permission_Control_Settings__c/pse__Permission_Control_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Permission Control Settings</label>
</CustomObject>