unpackaged/main/default/objects/pse__Permission_Control_Settings__c/fields/pse__Allow_Limited_Exp_Report_Edit_Post_Submt__c.field-meta.xml
<CustomField>
    <fullName>pse__Allow_Limited_Exp_Report_Edit_Post_Submt__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether a user can update a limited set of field (see white list fields) when a record has been submitted but before it has been approved. This is useful in cases where managers need to approve records but shouldn't have entry permission for resources.</description>
    <inlineHelpText>Whether a user can update a limited set of field (see white list fields) when a record has been submitted but before it has been approved. This is useful in cases where managers need to approve records but shouldn't have entry permission for resources.</inlineHelpText>
    <label>Allow Limited Exp Report Edit Post Submt</label>
    <type>Checkbox</type>
</CustomField>