unpackaged/main/default/objects/pse__Permission_Control_Settings__c/fields/pse__Default_Record_Limit__c.field-meta.xml
<CustomField>
    <fullName>pse__Default_Record_Limit__c</fullName>
    <defaultValue>1000</defaultValue>
    <inlineHelpText>Maximum number of records to evaluate permission controls against. This limits the number of queries against contact records during evaluation of permission controls. If your org contains a large number of active resources you may have to increase this.</inlineHelpText>
    <label>Default Record Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>