unpackaged/main/default/objects/pse__Permission_Control_Settings__c/fields/pse__Exp_Report_Field_White_List_Post_Submit__c.field-meta.xml
<CustomField>
    <fullName>pse__Exp_Report_Field_White_List_Post_Submit__c</fullName>
    <description>A comma-delimited list of field names that are allowed to be edited by anyone once a record is submitted but before it's approved.</description>
    <inlineHelpText>A comma-delimited list of field names that are allowed to be edited by anyone once a record is submitted but before it's approved.</inlineHelpText>
    <label>Exp Report Field White List Post Submit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>