unpackaged/main/default/objects/pse__Permission_Control_Settings__c/fields/pse__Exp_Report_FieldSet_WhiteList_PostSubmit__c.field-meta.xml
<CustomField>
    <fullName>pse__Exp_Report_FieldSet_WhiteList_PostSubmit__c</fullName>
    <description>The API name for a field set controlling editable fields after submitting a record but before it is approved. The default value is null. When defined, the value in this setting takes priority over equivalent White List Post Submit settings.</description>
    <inlineHelpText>The API name for a field set controlling editable fields after submitting a record but before it is approved. The default value is null. When defined, the value in this setting takes priority over equivalent White List Post Submit settings.</inlineHelpText>
    <label>Exp Report FieldSet WhiteList PostSubmit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>