unpackaged/main/default/objects/pse__Permission_Control_Settings__c/fields/pse__Expense_PSE_Field_White_List_Post_Submit__c.field-meta.xml
<CustomField>
    <fullName>pse__Expense_PSE_Field_White_List_Post_Submit__c</fullName>
    <label>Expense PSE Field White List Post Submit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>