unpackaged/main/default/objects/pse__Permission_Control_Settings__c/fields/pse__TC_Header_PSE_Field_White_List_Post_Smt__c.field-meta.xml
<CustomField>
    <fullName>pse__TC_Header_PSE_Field_White_List_Post_Smt__c</fullName>
    <description>A comma-delimited list of field names that are allowed to be edited by anyone once a record is submitted but before it's approved.</description>
    <inlineHelpText>A comma-delimited list of field names that are allowed to be edited by anyone once a record is submitted but before it's approved.</inlineHelpText>
    <label>TC Header PSE Field White List Post Smt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>